Color links blue.

--- a/examples/3d-printing/index.html
+++ b/examples/3d-printing/index.html
@@ -61,6 +61,7 @@
         function createLink (text, href) {
             var linkNode = document.createElementNS(svgmocker.svgns, "a");
             linkNode.setAttributeNS(svgmocker.xlinkns, "href", href);
+            linkNode.setAttribute("stroke", "blue");
             linkNode.appendChild(document.createTextNode(text));
             return linkNode;
         }
