Update main page description.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Svg Mocker</title>
+        <title>SVG Mocker</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
@@ -29,14 +29,22 @@
         <div class="container">
 
             <div class="hero-unit">
-                <h1>Svg Mocker</h1>
-                <p>Bridging the gap between the designer and a working prototype.</p>
+                <h1>SVG Mocker</h1>
+                <p><i>Bridging the gap between the designer and a working prototype.</i></p>
+                <p>
+                    <ol>
+                        <li>Draw an SVG</li>
+                        <li>Open SVG Mocker</li>
+                        <li>???</li>
+                        <li>Working prototype!</li>
+                    </ol>
+                </p>
             </div>
 
             <div class="row">
                 <div class="span4">
                     <h2>Slideshow</h2>
-                    <p>A rather traditional slideshow based on a single SVG</p>
+                    <p>A rather traditional slideshow based on a single SVG. Use left and right arrow keys to navigate.</p>
                     <p><a class="btn" href="examples/3d-printing/index.html">View demo &raquo;</a></p>
                     <p><a class="btn" href="examples/3d-printing/3dprinting.svg">See SVG &raquo;</a></p>
                 </div>
