--- a/examples/3d-printing/index.html
+++ b/examples/3d-printing/index.html
@@ -2,7 +2,7 @@
         "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-    <title></title>
+    <title>3D Printing Presentation Demo</title>
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="viewport" content = "width = device-width, initial-scale = 1.0, user-scalable = no" />
