--- a/examples/screens/index.html
+++ b/examples/screens/index.html
@@ -2,12 +2,47 @@
         "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-    <title></title>
+    <title>Screen-based Demo</title>
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="viewport" content = "width = device-width, initial-scale = 1.0, user-scalable = no" />
+    <style type="text/css">
+
+        body {
+            margin: 0;
+            padding: 0;
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            background: #f9f9f9;
+            color: #161616;
+        }
+
+    </style>
 </head>
 <body>
 
+<div id="app"></div>
+
+<script type="text/javascript" src="../../vendor/d3.v2.min.js"></script>
+<script type="text/javascript" src="../../lib/svgmocker.js"></script>
 <script type="text/javascript">
 
+    (function () {
+
+        function svgLoaded(svg) {
+            var screens = svgmocker.findAndCreateSlides(svg);
+            document.appendChild(screens.home);
+        }
+
+        d3.xml("screens.svg", "image/svg+xml", function (xml) {
+            var svg = document.importNode(xml.documentElement, true);
+            svgLoaded(svg);
+        });
+
+    })();
+
 </script>
+
 </body>
 </html>
