--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
 
             <div class="row">
                 <div class="span4">
+                    <h2>Multi-screen</h2>
+                    <p>Sample web application with many screens. Runs great on iPad.</p>
+                    <p><a class="btn" href="examples/screens/index.html">View demo &raquo;</a></p>
+                    <p><a class="btn" href="examples/screens/screens.svg">See SVG &raquo;</a></p>
+                </div>
+                <div class="span4">
                     <h2>Slideshow</h2>
                     <p>A rather traditional slideshow based on a single SVG. Use left and right arrow keys to navigate.</p>
                     <p><a class="btn" href="examples/3d-printing/index.html">View demo &raquo;</a></p>
