Rename the screens example.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
             <div class="row">
                 <div class="span4">
-                    <h2>Multi-screen</h2>
+                    <h2>Screens Example</h2>
                     <p>Sample web application with many screens. Runs great on iPad.</p>
                     <p><a class="btn" href="examples/screens/index.html">View demo &raquo;</a></p>
                     <p><a class="btn" href="examples/screens/screens.svg">See SVG &raquo;</a></p>
