--- a/examples/screens/index.html
+++ b/examples/screens/index.html
@@ -18,6 +18,11 @@
             color: #161616;
         }
 
+        #app {
+            width: 1024px;
+            margin: 0 auto;
+        }
+
     </style>
 </head>
 <body>
