Add page for dropping svg files.

--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
                     <p><a class="btn" href="examples/3d-printing/index.html">View demo &raquo;</a></p>
                     <p><a class="btn" href="examples/3d-printing/3dprinting.svg">See SVG &raquo;</a></p>
                 </div>
+                <div class="span4">
+                    <h2>Drop SVG</h2>
+                    <p>You can drag and drop your own SVG in this demo.</p>
+                    <p><a class="btn" href="examples/dragdrop/index.html">View demo &raquo;</a></p>
+                </div>
             </div>
 
         </div> <!-- /container -->
