--- a/examples/screens/index.html
+++ b/examples/screens/index.html
@@ -2,7 +2,7 @@
         "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-    <title>Screens Example</title>
+    <title>Drop SVG Example</title>
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="viewport" content = "width = device-width, initial-scale = 1.0, user-scalable = no" />
@@ -24,6 +24,8 @@
         }
 
     </style>
+    <link rel="stylesheet" href="../../css/bootstrap-responsive.min.css">
+    <link rel="stylesheet" href="../../css/main.css">
 </head>
 <body>
 
