--- a/examples/dragdrop/index.html
+++ b/examples/dragdrop/index.html
@@ -23,50 +23,128 @@
             margin: 0 auto;
         }
 
+        .hidden {
+            display: none;
+        }
+
     </style>
 </head>
 <body>
 
-<script type="text/javascript">
-
-    function download() {
-        var a = document.createElement("a");
-        a.href = 'data:Application/octet-stream,' + encodeURIComponent(droppedFile);
-        a.download = "youFile.svg";
-        a.click();
-    }
-
+<script id="startScreenTemplate" type="html/template">
+    <h1>Drag your SVG anywhere</h1>
 </script>
 
-<div id="svgContent">
-    <h1>Drag your SVG anywhere to render</h1>
-</div>
-<a href="javascript:download()">Download your presentation</a>
+<script id="controlsScreenTemplate" type="html/template">
+    <a href="#" id="viewSvg">View your SVG</a>
+    <a href="#" id="downloadSvg">Download your presentation</a>
+    <div id="svgContent"></div>
+</script>
+
+<div id="content"></div>
+
 
 <script type="text/javascript" src="../../lib/svgmocker.js"></script>
 <script type="text/javascript">
 
-    var droppedFile;
+    (function () {
 
-    document.body.addEventListener("drop", function (e) {
-        e.preventDefault();
-        var files = e.target.files || e.dataTransfer.files;
-        if (files.length !== 1) {
-            alert("Please drag only one SVG file.")
+        function $ (query) {
+            return document.body.querySelector(query);
         }
-        var file = files[0];
-        var reader = new FileReader();
-        reader.onload = function (event) {
-            var text = reader.result;
-            droppedFile = text;
-            var doc = new DOMParser().parseFromString(text, "application/xml");
-            var svg = document.importNode(doc.documentElement, true);
-            var el = document.body.querySelector("#svgContent");
-            el.innerHTML = "";
-            el.appendChild(svg);
-        };
-        reader.readAsText(file);
-    });
+
+        var screenController = (function (el) {
+            var currentScreen;
+            var screens;
+
+            function setScreens (value) {
+                screens = value;
+            }
+            function showScreen (id) {
+                if (currentScreen) {
+                    currentScreen.hide();
+                    currentScreen = undefined;
+                }
+                currentScreen = screens[id](document.body);
+                currentScreen.show();
+            }
+
+            return {
+                setScreens: setScreens,
+                showScreen: showScreen
+            };
+        })($("#content"));
+
+        var screens = (function (screenController) {
+            var droppedFile;
+
+            return {
+                start: function (el) {
+                    var template = $("#startScreenTemplate").innerHTML;
+                    function onDrop (e) {
+                        e.preventDefault();
+                        var files = e.target.files || e.dataTransfer.files;
+                        if (files.length !== 1) {
+                            alert("Please drag only one SVG file.")
+                        }
+                        var file = files[0];
+                        var reader = new FileReader();
+                        reader.onload = function (event) {
+                            droppedFile = reader.result;
+                            screenController.showScreen("controls");
+                        };
+                        reader.readAsText(file);
+                    }
+                    function show () {
+                        el.innerHTML = template;
+                        el.addEventListener("drop", onDrop);
+                    }
+                    function hide () {
+                        el.removeEventListener("drop", onDrop);
+                    }
+
+                    return {
+                        show: show,
+                        hide: hide
+                    }
+                },
+                controls: function (el) {
+                    var template = $("#controlsScreenTemplate").innerHTML;
+
+                    function downloadSvg () {
+                        var a = document.createElement("a");
+                        a.href = 'data:Application/octet-stream,' + encodeURIComponent(droppedFile);
+                        a.download = "youFile.svg";
+                        a.click();
+                    }
+                    function viewSvg (svgText) {
+                        var doc = new DOMParser().parseFromString(svgText, "application/xml");
+                        var svg = document.importNode(doc.documentElement, true);
+                        var svgEl = el.querySelector("#svgContent");
+                        svgEl.innerHTML = "";
+                        svgEl.appendChild(svg);
+                    }
+                    function show () {
+                        el.innerHTML = template;
+                        el.querySelector("#viewSvg").onclick = function () { viewSvg(droppedFile); };
+                        el.querySelector("#downloadSvg").onclick = downloadSvg;
+                    }
+                    function hide () {
+
+                    }
+
+                    return {
+                        show: show,
+                        hide: hide
+                    };
+                }
+            };
+        })(screenController);
+
+        screenController.setScreens(screens);
+        screenController.showScreen("start");
+
+    })();
 
 </script>
 
