Refactor functionality into pages and modules.

--- a/examples/dragdrop/index.html
+++ b/examples/dragdrop/index.html
@@ -18,31 +18,13 @@
             color: #161616;
         }
 
-        #app {
-            width: 1024px;
-            margin: 0 auto;
-        }
-
-        .hidden {
-            display: none;
-        }
-
     </style>
 </head>
 <body>
 
-<script id="startScreenTemplate" type="html/template">
-    <h1>Drag your SVG anywhere</h1>
-</script>
-
-<script id="controlsScreenTemplate" type="html/template">
-    <a href="#" id="viewSvg">View your SVG</a>
-    <a href="#" id="downloadSvg">Download your presentation</a>
-    <div id="svgContent"></div>
-</script>
+<button id="useSampleSvg">Use Sample Svg</button>
 
 <div id="content"></div>
-
 
 <script type="text/javascript" src="../../lib/svgmocker.js"></script>
 <script type="text/javascript" src="../../vendor/require.js"></script>
