Add router; don't destroy page elements; add underscore.js.

--- a/examples/dragdrop/index.html
+++ b/examples/dragdrop/index.html
@@ -26,6 +26,7 @@
 
 <div id="content"></div>
 
+<script type="text/javascript" src="../../vendor/underscore.js"></script>
 <script type="text/javascript" src="../../lib/svgmocker.js"></script>
 <script type="text/javascript" src="../../vendor/require.js"></script>
 <script type="text/javascript" src="main.js"></script>
