--- a/examples/dragdrop/js/pages/home.html
+++ b/examples/dragdrop/js/pages/home.html
@@ -1,3 +1,4 @@
 <a href="#" id="viewSvg">View your SVG</a>
 <a href="#" id="downloadSvg">Download your presentation</a>
+<div id="svgSlideView"></div>
 <div id="svgContent"></div>
