--- a/examples/dragdrop/index.html
+++ b/examples/dragdrop/index.html
@@ -6,19 +6,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="viewport" content = "width = device-width, initial-scale = 1.0, user-scalable = no" />
-    <style type="text/css">
-
-        body {
-            margin: 0;
-            padding: 0;
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            background: #f9f9f9;
-            color: #161616;
-        }
-
-    </style>
+    <link href="style/main.css" rel="stylesheet">
 </head>
 <body>
 
